# FEMproject

./: CMakeLists.txt  Q4_encastre.inp  README.md  TEMPORARIO_AQUI_LUCAS_parteDeLeituraDeArquivos.hpp  baseElemClass.hpp  baseNodeClass.hpp  baseStructuralAnalysisClass.hpp  elementClassT6.hpp  elementClass_Q4.hpp  elementClass_T6.hpp  elementIsopar_Q4.hpp  fileComunicationFunctions.hpp  index.html - Atalho.lnk  main.cpp
Exemplos e Arquivos Abaqus/: teste_viga.inp  teste_viga.py
Exemplos e Arquivos Abaqus/Barra comprimida/: abaqusMacros.py  job_q4.inp  job_q4_2.inp
Exemplos e Arquivos Abaqus/Viga engastada/: teste_viga.inp  teste_viga.py
Saida/: Saidas (deslocamentosxstressxstrain).txt
doc/: Doxyfile
doc/html/: _t_e_m_p_o_r_a_r_i_o___a_q_u_i___l_u_c_a_s__parte_de_leitura_de_arquivos_8hpp_source.html  annotated.html  base_elem_class_8hpp_source.html  base_elem_isopar_class_8hpp_source.html  base_node_class_8hpp_source.html  base_structural_analysis_class_8hpp_source.html  classbase_elem_class-members.html  classbase_elem_class.html  classbase_elem_isopar_class-members.html  classbase_elem_isopar_class.html  classbase_node_class-members.html  classbase_node_class.html  classbase_structural_analysis_class-members.html  classbase_structural_analysis_class.html  classeigen_linear_solver_info-members.html  classeigen_linear_solver_info.html  classelement_class___q4-members.html  classelement_class___q4.html  classelement_class___t6-members.html  classelement_class___t6.html  classelement_isopar___q4-members.html  classelement_isopar___q4.html  classes.html  files.html  (+14 more)
(+63 files in other folders)
